--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 /vendor
 /node_modules
 /public/storage
+/public/bower_components
+/public/npm-debug.log
 Homestead.yaml
 Homestead.json
 .env
 /config/local
 .DS_Store
 bootstrap/cache/
+
 
 
 
