--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 /node_modules
 /public/storage
 /public/bower_components
+/bower_components
+/public/css
+/public/js
+/public/vendor
 /public/npm-debug.log
 Homestead.yaml
 Homestead.json
